NM-441 Clearing tiles in a more meaningful manner

--- a/app/frontend/stylesheets/components/_datepicker.scss
+++ b/app/frontend/stylesheets/components/_datepicker.scss
@@ -136,7 +136,7 @@
         color: $gray;
       }
 
-      &.active {
+      &.active, &.datepicker-day-other-month.active {
         background: $green;
         color: $pure-white;
       }
