--- a/app/new_ui_views/dashboard/company/payouts/edit.html.haml
+++ b/app/new_ui_views/dashboard/company/payouts/edit.html.haml
@@ -8,7 +8,7 @@
     .panel-body
       = render partial: 'form', locals: { f: f }
 
-  - unless @merchant_account.chain_payments?
+  - unless @merchant_account.try(:chain_payments?)
     .panel.form-actions
       .panel-body
         = f.submit t('payouts.buttons.save')
