Raygun JS tracking

--- a/app/new_ui_views/layouts/dashboard.html.haml
+++ b/app/new_ui_views/layouts/dashboard.html.haml
@@ -11,6 +11,9 @@
     %link{:href => "https://fonts.googleapis.com/css?family=Lato:300,400,400italic,700italic,700", :rel => "stylesheet"}/
     = stylesheet_link_tag 'new_ui_vendor'
     = stylesheet_link_tag 'new_ui'
+
+    = render 'shared/raygun/libs'
+
     = render "dynamic_theme/new_ui"
 
     / Prefetch
@@ -93,3 +96,5 @@
         });
 
     = yield(:body_bottom)
+
+    = render 'shared/raygun/init'
