--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,6 +27,9 @@
     %meta{:content => "yes", :name => "apple-mobile-web-app-capable"}/
     %meta{:content => "black", :name => "apple-mobile-web-app-status-bar-style"}/
     %meta{:content => "chrome=IE7", "http-equiv" => "X-UA-Compatible"}/
+
+    = render 'shared/raygun/libs'
+
     -if platform_context.domain.near_me_domain?
       %meta{:name => "robots", "content" => "noindex, nofollow"}/
     = inject_content_holder('HEAD')
@@ -84,4 +87,6 @@
     = render 'layouts/initializers'
     = render 'layouts/scripts'
     = yield(:body_bottom)
+
+    = render 'shared/raygun/init'
 
