--- a/app/community_views/shared/_head.html.haml
+++ b/app/community_views/shared/_head.html.haml
@@ -18,6 +18,8 @@
 
   %link{:href => "#{platform_context.favicon_image.url}", :rel => "shortcut icon"}/
 
+  = render 'shared/raygun/libs'
+
   = render "shared/javascript_assets"
   = javascript_include_tag 'vendor/modernizr'
 
