--- a/app/views/layouts/instance_admin.html.haml
+++ b/app/views/layouts/instance_admin.html.haml
@@ -11,6 +11,7 @@
     = stylesheet_link_tag 'instance_admin'
     = yield :styles
 
+    = render 'shared/raygun/libs'
     = render 'shared/ckeditor_basepath'
     = render "shared/javascript_assets"
 
@@ -53,3 +54,5 @@
         $(function(){
         = yield :domready
         });
+
+    = render 'shared/raygun/init'
