--- a/app/views/layouts/instance_wizard.html.haml
+++ b/app/views/layouts/instance_wizard.html.haml
@@ -6,6 +6,8 @@
     %meta{content: "text/html; charset=US-ASCII", "http-equiv" => "Content-type"}
     %meta{content: "width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1", name: "viewport"}
 
+    = render 'shared/raygun/libs'
+
     = csrf_meta_tag
     = stylesheet_link_tag 'instance_wizard'
 
@@ -19,3 +21,5 @@
     = webpack_manifest_script
     = webpack_bundle_tag 'common'
     = webpack_bundle_tag 'instancewizard'
+
+    = render 'shared/raygun/init'
