--- a/app/frontend/stylesheets/intel/modules/_user-header.scss
+++ b/app/frontend/stylesheets/intel/modules/_user-header.scss
@@ -187,3 +187,19 @@
         }
     }
 }
+
+.admin-profile-notice {
+    background: #FEEFB3;
+    padding: 20px;
+    margin-top: 30px;
+    margin-bottom: -50px !important;
+    text-align: center;
+    border: 1px solid darken(#FEEFB3, 30%);
+
+    p {
+        font-size: 16px;
+        font-weight: normal;
+        color: #9F6000;
+    }
+}
+
