--- a/app/views/instance_admin/manage/additional_charge_types/index.html.haml
+++ b/app/views/instance_admin/manage/additional_charge_types/index.html.haml
@@ -17,6 +17,7 @@
               %td= t('instance_admin.manage.upsell_addons.name')
               %td= t('instance_admin.manage.upsell_addons.service')
               %td= t('instance_admin.manage.upsell_addons.amount')
+              %td= t('instance_admin.manage.upsell_addons.percent')
               %td= t('instance_admin.manage.upsell_addons.status')
               %td= t('instance_admin.manage.upsell_addons.commission_receiver')
               %td= link_to t('instance_admin.manage.upsell_addons.add_upsell'), new_instance_admin_manage_additional_charge_type_path
