--- a/app/views/locations/_additional_charges.html.haml
+++ b/app/views/locations/_additional_charges.html.haml
@@ -3,13 +3,14 @@
     %h4=  t('dashboard.user_reservations.additional_charges')
     - listing.all_additional_charge_types.each do |ac|
       - if ac.mandatory?
-        .mandatory-charge{ data: { 'mandatory-charge' => ac.amount } }
+        .mandatory-charge{ data: { 'mandatory-charge' => ac.amount || 0, 'charge-percent' => ac.percent.to_i, 'currency' => currency_symbol_from_code(listing.currency) } }
           %span
             = ac.name
+            = "(" + ac.percent.to_s + "%)" unless ac.percent.to_i.zero?
           .pull-right= number_to_currency_symbol(listing.currency, content_tag(:span, ac.amount))
           %br
       - else
-        .optional-charge{ data: { 'optional-charge' => ac.amount } }
+        .optional-charge{ data: { 'optional-charge' => ac.amount || 0, 'charge-percent' => ac.percent.to_i, 'currency' => currency_symbol_from_code(listing.currency) } }
           %span
             = check_box_tag "reservation_request[additional_charge_ids][]", ac.id, false, data: { 'optional-charge-select' => '' }
             = ac.name
