--- a/app/views/instance_admin/manage/additional_charge_types/_form.html.haml
+++ b/app/views/instance_admin/manage/additional_charge_types/_form.html.haml
@@ -10,8 +10,10 @@
       = f.input :additional_charge_type_target, collection: @additional_charge_type.additional_charge_type_targets, selected: f.object.additional_charge_type_target.try(:signature),
         prompt: t('instance_admin.manage.upsell_addons.select_the_service_associated')
   .row
-    .input-container.col-xs-6
+    .input-container.col-xs-3
       = f.input :amount
+    .input-container.col-xs-3
+      = f.input :percent
     .input-container.col-xs-6
       = f.input :status, collection: AdditionalChargeType::STATUSES,
         prompt: t('instance_admin.manage.upsell_addons.select_optional_or_mandatory')
