--- a/app/views/layouts/mailer.html.liquid
+++ b/app/views/layouts/mailer.html.liquid
@@ -128,42 +128,6 @@
       padding-bottom: 25px;
     }
 
-    td.container {
-      display:block!important;
-      max-width:600px !important;
-      margin:0 auto!important;
-      clear:both !important;
-      padding:5px;
-    }
-
-    img.logo {
-      max-height: 30px;
-    }
-
-    .logo-container {
-      width: 240px;
-      max-height: 30px;
-      overflow: hidden;
-      vertical-align:middle ;
-    }
-
-    .content-logo {
-      display:block;
-      height: 60px;
-      max-width:600px;
-      margin:0 auto;
-      padding-left: 20px;
-      overflow: hidden;
-      background-color: {{ platform_context.color_black }};
-    }
-
-    .content {
-      max-width:600px;
-      margin:0 auto;
-      display:block;
-      color: #505050 !important;
-    }
-
     .body-content {
       background-color: #F9F9F9;
       padding: 30px;
@@ -234,7 +198,7 @@
 
     .footer table tr td {
       color: #B3B3B3 !important;
-      font-size 10px !important;
+      font-size: 10px !important;
       background-color: #ECECEC;
       text-align: center;
       width: 100%;
@@ -318,21 +282,21 @@
       <table class="body-wrap" bgcolor="#ECECEC" border="0" cellpadding="0" cellspacing="0" width="100%" height="100%">
         <tr>
           <td></td>
-          <td class="container" bgcolor="#ECECEC">
+          <td class="container" bgcolor="#ECECEC" style="display:block; max-width:600px; margin:0 auto; clear:both; padding:5px;">
 
-            <div class="content-logo">
+          <div class="content-logo" style="height: 60px; max-width:600px; margin:0 auto; padding-left: 20px; overflow: hidden; background-color: {{ platform_context.color_black }};">
             <table bgcolor="{{ platform_context.color_black }}" border="0" cellpadding="0" cellspacing="0" width="100%" height="60px">
               <tr>
                 <td bgcolor="{{ platform_context.color_black }}">
-                  <div class='logo-container'>
-                    <img class="logo" src="{{ platform_context.logo_url }}">
+                  <div class='logo-container' style="width: 240px; max-height: 30px; overflow: hidden; vertical-align:middle;">
+                    <img class="logo" src="{{ platform_context.logo_url }}" style="max-height: 30px;" alt="{{platform_context.name}}">
                   </div>
                 </td>
               </tr>
             </table>
             </div>
 
-            <div class="content">
+            <div class="content" style="max-width:600px; margin:0 auto; display:block; color: #505050;">
             <table border="0" cellpadding="0" cellspacing="0" width="100%" height="100%">
               <tr>
                 <td bgcolor="#F9F9F9" class="body-content">
@@ -340,11 +304,11 @@
                 </td>
               </tr>
               <tr>
-                <td class="center footer" bgcolor="#ECECEC">
+                <td class="center footer" bgcolor="#ECECEC" style="padding-top: 10px; padding-bottom: 10px; background: #ECECEC;">
                   <!-- FOOTER -->
                   <table border="0" cellpadding="0" cellspacing="0" width="100%" height="100%">
                     <tr>
-                      <td>
+                      <td style="color: #B3B3B3; font-size: 10px; background-color: #ECECEC; text-align: center; width: 100%; max-width: 600px; font-size: 12px;">
                         <center>You are receiving this email because you signed up to {{ platform_context.name }} using the email address {{ user.email }}. After logging in you can <a href="{{platform_context.unsubscribe_url}}">unsubscribe</a></center>
                         <center>{{ platform_context.address }}</center>
                       </td>
