NM-3887 Capacity field is now an input in space wizard

--- a/app/new_ui_views/dashboard/company/transactables/_form.html.haml
+++ b/app/new_ui_views/dashboard/company/transactables/_form.html.haml
@@ -62,6 +62,9 @@
         - when 'confirm_reservations'
           = render "dashboard/company/transactables/form_fields/confirm_reservations", f: f
 
+        - when 'capacity'
+          = render "dashboard/company/transactables/form_fields/capacity", f: f
+
         - when *@transactable_type.categories.roots.map { |c| "Category - #{c.name}" }
           = render "dashboard/company/transactables/form_fields/category", f: f, field: field
 
