NM-3895 Fixed cropping modal in instance admin

--- a/app/frontend/stylesheets/instance_admin.scss
+++ b/app/frontend/stylesheets/instance_admin.scss
@@ -33,6 +33,5 @@
 @import "instance_admin/content_holders";
 @import "instance_admin/schedule";
 
-@import "instance_admin/modal";
-@import "dashboard/modal";
+@import "instance_admin/dashboard_modal";
 
