--- a/app/new_ui_views/layouts/dashboard.html.haml
+++ b/app/new_ui_views/layouts/dashboard.html.haml
@@ -13,7 +13,7 @@
     = stylesheet_link_tag 'new_ui'
 
     = render 'shared/raygun/libs'
-    = javascript_include_tag 'jquery'
+    = javascript_include_tag 'jquery.min'
 
     = render "dynamic_theme/new_ui"
 
