--- a/app/views/layouts/blog_admin.html.haml
+++ b/app/views/layouts/blog_admin.html.haml
@@ -13,7 +13,8 @@
 
     / Head Javascript
     = render 'shared/raygun/libs'
-    = javascript_include_tag 'jquery'
+    = javascript_include_tag 'jquery.min'
+
     = javascript_include_tag 'vendor/modernizr'
     = render 'shared/ckeditor_basepath'
 
