--- a/app/views/layouts/dashboard.html.haml
+++ b/app/views/layouts/dashboard.html.haml
@@ -23,7 +23,7 @@
     %meta{:content => "chrome=IE7", "http-equiv" => "X-UA-Compatible"}/
 
     = render 'shared/raygun/libs'
-    = javascript_include_tag 'jquery'
+    = javascript_include_tag 'jquery.min'
 
     = render 'social/social_meta_tags' rescue ''
 
