--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -9,7 +9,7 @@
 
     = render 'shared/raygun/libs'
     = javascript_include_tag 'vendor/modernizr'
-    = javascript_include_tag 'jquery'
+    = javascript_include_tag 'jquery.min'
 
     = stylesheet_link_tag 'admin_vendor'
     = stylesheet_link_tag 'admin'
