--- a/app/views/layouts/dashboard.html.haml
+++ b/app/views/layouts/dashboard.html.haml
@@ -23,6 +23,7 @@
     %meta{:content => "chrome=IE7", "http-equiv" => "X-UA-Compatible"}/
 
     = render 'shared/raygun/libs'
+    = javascript_include_tag 'jquery.min'
 
     = render 'social/social_meta_tags' rescue ''
 
@@ -63,7 +64,7 @@
     = javascript_tag do
       = javascript_i18n_include_tag
 
-    = javascript_include_tag "//maps.googleapis.com/maps/api/js?libraries=places&sensor=false"
+    = javascript_include_tag "//maps.googleapis.com/maps/api/js?libraries=places"
     = webpack_manifest_script
     = webpack_bundle_tag 'common'
     = webpack_bundle_tag 'dashboard'
