--- a/app/views/layouts/instance_admin.html.haml
+++ b/app/views/layouts/instance_admin.html.haml
@@ -12,6 +12,7 @@
     = yield :styles
 
     = render 'shared/raygun/libs'
+    = javascript_include_tag 'jquery.min'
     = render 'shared/ckeditor_basepath'
     = render "shared/javascript_assets"
 
