--- a/app/views/layouts/instance_wizard.html.haml
+++ b/app/views/layouts/instance_wizard.html.haml
@@ -7,6 +7,7 @@
     %meta{content: "width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1", name: "viewport"}
 
     = render 'shared/raygun/libs'
+    = javascript_include_tag 'jquery.min'
 
     = csrf_meta_tag
     = stylesheet_link_tag 'instance_wizard'
