--- a/app/views/layouts/blog.html.haml
+++ b/app/views/layouts/blog.html.haml
@@ -17,6 +17,7 @@
     = stylesheet_link_tag 'application'
     = render "dynamic_theme/application"
     = render 'shared/raygun/libs'
+    = javascript_include_tag 'jquery'
 
   %body.blog
     = render 'blog/blog_posts/header'
