--- a/app/community_views/shared/_head.html.haml
+++ b/app/community_views/shared/_head.html.haml
@@ -19,6 +19,7 @@
   %link{:href => "#{platform_context.favicon_image.url}", :rel => "shortcut icon"}/
 
   = render 'shared/raygun/libs'
+  = javascript_include_tag 'jquery'
 
   = render "shared/javascript_assets"
   = javascript_include_tag 'vendor/modernizr'
