--- a/app/new_ui_views/layouts/dashboard.html.haml
+++ b/app/new_ui_views/layouts/dashboard.html.haml
@@ -13,6 +13,7 @@
     = stylesheet_link_tag 'new_ui'
 
     = render 'shared/raygun/libs'
+    = javascript_include_tag 'jquery'
 
     = render "dynamic_theme/new_ui"
 
@@ -77,7 +78,7 @@
     = javascript_tag do
       = javascript_i18n_include_tag
 
-    = javascript_include_tag "//maps.googleapis.com/maps/api/js?libraries=places&sensor=false"
+    = javascript_include_tag "//maps.googleapis.com/maps/api/js?libraries=places"
 
     = webpack_manifest_script
     = webpack_bundle_tag 'common'
