--- a/app/views/layouts/blog_admin.html.haml
+++ b/app/views/layouts/blog_admin.html.haml
@@ -7,11 +7,13 @@
     %meta{content: "width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1", name: "viewport"}/
     = csrf_meta_tag
     = render 'layouts/favicon'
-    = render 'shared/raygun/libs'
+
     = stylesheet_link_tag 'blog_admin_vendor'
     = stylesheet_link_tag 'blog_admin'
 
     / Head Javascript
+    = render 'shared/raygun/libs'
+    = javascript_include_tag 'jquery'
     = javascript_include_tag 'vendor/modernizr'
     = render 'shared/ckeditor_basepath'
 
