NM-2572 Using correct amount for total payable to host

--- a/app/new_ui_views/dashboard/company/host_recurring_bookings/_recurring_booking.html.haml
+++ b/app/new_ui_views/dashboard/company/host_recurring_bookings/_recurring_booking.html.haml
@@ -73,7 +73,7 @@
 
     .col-md-1
       %h3= t("dashboard.user_recurring_bookings.#{recurring_booking.interval}_price")
-      %p= recurring_booking.total_price_for(current_user)
+      %p= recurring_booking.total_payable_to_host_formatted
 
 
 
