--- a/app/views/recurring_booking_mailer/notify_host_without_confirmation.text.liquid
+++ b/app/views/recurring_booking_mailer/notify_host_without_confirmation.text.liquid
@@ -8,7 +8,7 @@ What: {{ listing.name }} x {{ recurring_booking.quantity }}
 
 When: {{ recurring_booking.start_date }}
 
-Total: {{ recurring_booking.subtotal_price }}
+Total: {{ recurring_booking.total_payable_to_host_formatted }}
 
 Exciting, right? You can manage this booking from the Dashboard.
 
