--- a/app/views/reservation_mailer/notify_host_with_confirmation.html.liquid
+++ b/app/views/reservation_mailer/notify_host_with_confirmation.html.liquid
@@ -40,7 +40,7 @@ Your listing, '<a href="{{ platform_context.host | append:listing.listing_url }}
 
   <div class="row">
     <strong style='display: inline-block;'>Total</strong>
-    <span style="float: right;">{{ reservation.total_price }}</span>
+    <span style="float: right;">{{ reservation.total_payable_to_host_formatted }}</span>
   </div>
 
 </div>
