--- a/app/views/reservation_mailer/notify_host_with_confirmation.text.liquid
+++ b/app/views/reservation_mailer/notify_host_with_confirmation.text.liquid
@@ -17,7 +17,7 @@ When:
   {{ reservation.dates_summary }}
 {% endif %}
 
-Total: {{ reservation.total_price }}
+Total: {{ reservation.total_payable_to_host_formatted }}
 
 Exciting, right? Please, confirm the booking and let's get the {{ listing.lessee }} set up!
 
