--- a/app/views/recurring_booking_mailer/notify_host_with_confirmation.text.liquid
+++ b/app/views/recurring_booking_mailer/notify_host_with_confirmation.text.liquid
@@ -8,7 +8,7 @@ What: {{ listing.name }} x {{ recurring_booking.quantity }}
 
 Starting at: {{ recurring_booking.start_date | to_date | localize: 'day_and_month' }}
 
-Total: {{ recurring_booking.subtotal_price }}
+Total: {{ recurring_booking.total_payable_to_host_formatted }}
 
 Exciting, right? Please, confirm the booking and let's get the {{ listing.lessee }} set up!
 
