--- a/app/views/recurring_booking_mailer/notify_host_without_confirmation.html.liquid
+++ b/app/views/recurring_booking_mailer/notify_host_without_confirmation.html.liquid
@@ -29,7 +29,7 @@ Your listing, '<a href="{{ platform_context.host | append:listing.listing_url }}
 
   <div class="row">
     <strong style='display: inline-block;'>Total</strong>
-    <span style="float: right;">{{ recurring_booking.subtotal_price }}</span>
+    <span style="float: right;">{{ recurring_booking.total_payable_to_host_formatted }}</span>
   </div>
 
 </div>
