Disabled logging for aborted AJAX calls (user navigates from page)
Disabled mangling of variable names during minification

Removed $.browser dependency

Message on category call will now be called correctly

Fixed condition for checking define day option

Hide navigation in new ui should work again when clicking outside of nav

Limited input missing label fix

Added Modernizr to external libraries

--- a/app/views/shared/raygun/_init.html.erb
+++ b/app/views/shared/raygun/_init.html.erb
@@ -1,8 +1,10 @@
 <% if Rails.application.config.raygun_js_reporting %>
 <script type="text/javascript">
   rg4js('apiKey', '<%= Rails.application.config.raygun_js_api_key %>');
-
   rg4js('enableCrashReporting', true);
+  rg4js('options', {
+    ignoreAjaxAbort: true
+  });
 
   <% if current_user %>
   rg4js('setUser', {
