--- a/app/views/search/_header.html.haml
+++ b/app/views/search/_header.html.haml
@@ -45,6 +45,7 @@
 
 
     .search-filters{:'data-search-filters-container' => true, :class => platform_context.domain.name.include?('desksnear.me') ? '' : 'two-filters'}
+      = render partial: 'search/transactable_type_filter'
       - @searcher.filterable_custom_attributes.each do |ca|
         = render partial: 'search/filter', locals: { header_name: t(ca.label_key), selected_values: params[:lg_custom_attributes] ? params[:lg_custom_attributes][ca.name] || [] : [], input_name: "lg_custom_attributes[#{ca.name}][]", options: ca.valid_values_translated, name: ca.name }
       - if @searcher.transactable_type.display_location_type_filter?
