--- a/app/views/shared/raygun/_init.html.erb
+++ b/app/views/shared/raygun/_init.html.erb
@@ -2,7 +2,7 @@
 <script type="text/javascript">
   rg4js('apiKey', '<%= Rails.application.config.raygun_js_api_key %>');
   rg4js('enableCrashReporting', true);
-  rg4js('setVersion', <%= Rails.application.config.app_version %>);
+  rg4js('setVersion', '<%= Rails.application.config.app_version %>');
   rg4js('options', {
     ignoreAjaxAbort: true
   });
