NM-3903 Fix - asterisk for photos only if required

--- a/app/new_ui_views/dashboard/company/transactables/form_fields/_photos.html.haml
+++ b/app/new_ui_views/dashboard/company/transactables/form_fields/_photos.html.haml
@@ -1,5 +1,6 @@
 %h2
-  %abbr{ title: "required"} *
+  - if f.object.transactable_type.enable_photo_required?
+    %abbr{ title: "required"} *
   = t('dashboard.photos.title')
 %p= t('dashboard.photos.requirement')
 
