--- a/app/new_ui_views/dashboard/company/products/form_fields/_seller_attachments.html.haml
+++ b/app/new_ui_views/dashboard/company/products/form_fields/_seller_attachments.html.haml
@@ -1,3 +1,3 @@
 %h3= t('forms.product_form.attachments')
 
-= f.input :attachment, as: :attachment, collection: @attachments, upload_url: dashboard_seller_attachments_path, label: false, attachment_template: "dashboard/shared/attachments/seller_attachment"
+= f.input :attachment, as: :attachment, collection: @attachments, upload_url: dashboard_seller_attachments_path, label: false, attachment_template: "dashboard/shared/attachments/seller_attachment", input_html: { 'multiple' => true }
